--- a/pages/10910.html
+++ b/pages/10910.html
@@ -1044,33 +1044,33 @@ margin-left: 0em;
 <h3 id='EquationsOfMotionFromTheBianchiIdentity'>Equations of motion from the Bianchi identity</h3>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a> of 10d super Yang-Mills happen to be equivalent in <a class='existingWikiWord' href='/nlab/show/superspace'>superspace</a> to the <a class='existingWikiWord' href='/nlab/show/Bianchi+identity'>Bianchi identity</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mi>F</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mi>F</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
   D F = 0
 
 </annotation></semantics></math></div>
 <p>subject to the constraint that the bispinorial part of the <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> 2-form vanishes</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msub><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msub><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
   F_{\alpha \beta}
    = 0
 
 </annotation></semantics></math></div>
-<p>(e.g. <a href='#Witten86'>Witten 86</a>, <a href='#BonoraBregolaLechnerPastiTonin87'>Bonora-Bregola-Lechner-Pasti-Tonin 87, above (2.7)</a>).</p>
+<p>(e.g. <a href='#Witten86'>Witten 86</a>, <a href='#AtickDharRatra86'>Atick-Dhar-Ratra 86, (4.14)</a>, <a href='#BonoraBregolaLechnerPastiTonin87'>Bonora-Bregola-Lechner-Pasti-Tonin 87, above (2.7)</a>).</p>
 
 <p>After embedding into <a class='existingWikiWord' href='/nlab/show/heterotic+string+theory'>heterotic supergravity</a> this becomes parts of the <a class='existingWikiWord' href='/nlab/show/torsion+constraints+in+supergravity'>torsion constraints of supergravity</a>. See <a href='torsion+constraints+in+supergravity#HeteroticSupergravity'>there</a>.</p>
 
-<p>In this <a class='existingWikiWord' href='/nlab/show/superspace'>superspace</a> formulation the <a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> <math class='maruku-mathml' display='inline' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>χ</mi></mrow><annotation encoding='application/x-tex'>\chi</annotation></semantics></math> appears as the even-odd component of the super-<a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> form</p>
-<div class='maruku-equation' id='eq:EvenOddFieldStrengthViaGaugino'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mrow><mo stretchy='false'>(</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msub><mspace width='thickmathspace'></mspace><mo>∝</mo><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><mover><mi>ψ</mi><mo>¯</mo></mover><msub><mi>Γ</mi> <mi>a</mi></msub><mi>χ</mi><mo>)</mo></mrow><mo>∧</mo><msup><mi>e</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>
+<p>In this <a class='existingWikiWord' href='/nlab/show/superspace'>superspace</a> formulation the <a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> <math class='maruku-mathml' display='inline' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>χ</mi></mrow><annotation encoding='application/x-tex'>\chi</annotation></semantics></math> appears as the even-odd component of the super-<a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> form</p>
+<div class='maruku-equation' id='eq:EvenOddFieldStrengthViaGaugino'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mrow><mo stretchy='false'>(</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msub><mspace width='thickmathspace'></mspace><mo>∝</mo><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><mover><mi>ψ</mi><mo>¯</mo></mover><msub><mi>Γ</mi> <mi>a</mi></msub><mi>χ</mi><mo>)</mo></mrow><mo>∧</mo><msup><mi>e</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>
   
   F_{(1,1)} 
     \;\propto\; 
   \left(\overline{\psi} \Gamma_a \chi\right) \wedge e^a
 
 </annotation></semantics></math></div>
-<p>(where <math class='maruku-mathml' display='inline' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msup><mi>e</mi> <mi>a</mi></msup><mo>,</mo><msup><mi>ψ</mi> <mi>α</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(e^a, \psi^\alpha)</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/super+vielbein'>super vielbein</a>). This is (<a href='#Witten86'>Witten 86 (8)</a>, <a href='#BonoraPastiTonin87'>Bonora-Pasti-Tonin 87, below (11)</a>, <a href='#BonoraBregolaLechnerPastiTonin87'>Bonora-Bregola-Lechner-Pasti-Tonin 87, (2.27)</a>).</p>
+<p>(where <math class='maruku-mathml' display='inline' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msup><mi>e</mi> <mi>a</mi></msup><mo>,</mo><msup><mi>ψ</mi> <mi>α</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(e^a, \psi^\alpha)</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/super+vielbein'>super vielbein</a>). This is (<a href='#Witten86'>Witten 86 (8)</a>, <a href='#BonoraPastiTonin87'>Bonora-Pasti-Tonin 87, below (11)</a>, <a href='#BonoraBregolaLechnerPastiTonin87'>Bonora-Bregola-Lechner-Pasti-Tonin 87, (2.27)</a>).</p>
 
 <h3 id='compactification_to_the_point'>Compactification to the point</h3>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactification</a> of <math class='maruku-mathml' display='inline' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>10</mn></mrow><annotation encoding='application/x-tex'>D=10</annotation></semantics></math> super-Yang-Mills to the point is a <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> whose <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> are simply elements of the gauge <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>, hence <a class='existingWikiWord' href='/nlab/show/matrix'>matrices</a> if we have a <a class='existingWikiWord' href='/nlab/show/matrix+Lie+algebra'>matrix Lie algebra</a>. The theory defined by this reduction is called the <em><a class='existingWikiWord' href='/nlab/show/IKKT+matrix+model'>IKKT matrix model</a></em>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactification</a> of <math class='maruku-mathml' display='inline' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>10</mn></mrow><annotation encoding='application/x-tex'>D=10</annotation></semantics></math> super-Yang-Mills to the point is a <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> whose <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> are simply elements of the gauge <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>, hence <a class='existingWikiWord' href='/nlab/show/matrix'>matrices</a> if we have a <a class='existingWikiWord' href='/nlab/show/matrix+Lie+algebra'>matrix Lie algebra</a>. The theory defined by this reduction is called the <em><a class='existingWikiWord' href='/nlab/show/IKKT+matrix+model'>IKKT matrix model</a></em>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -1080,7 +1080,7 @@ margin-left: 0em;
 </li>
 
 <li id='AtickDharRatra86'>
-<p><a class='existingWikiWord' href='/nlab/show/Joseph+Atick'>Joseph Atick</a>, Avinash Dhar, and Bharat Ratra, <em>Superspace formulation of ten-dimensional <math class='maruku-mathml' display='inline' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>N=1</annotation></semantics></math> supergravity coupled to <math class='maruku-mathml' display='inline' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>N=1</annotation></semantics></math> super Yang-Mills theory</em>, Phys. Rev. D 33, 2824, 1986 (<a href='https://doi.org/10.1103/PhysRevD.33.2824'>doi.org/10.1103/PhysRevD.33.2824</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Joseph+Atick'>Joseph Atick</a>, Avinash Dhar, and Bharat Ratra, <em>Superspace formulation of ten-dimensional <math class='maruku-mathml' display='inline' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>N=1</annotation></semantics></math> supergravity coupled to <math class='maruku-mathml' display='inline' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>N=1</annotation></semantics></math> super Yang-Mills theory</em>, Phys. Rev. D 33, 2824, 1986 (<a href='https://doi.org/10.1103/PhysRevD.33.2824'>doi.org/10.1103/PhysRevD.33.2824</a>)</p>
 </li>
 
 <li id='Witten86'>
@@ -1092,7 +1092,7 @@ margin-left: 0em;
 </li>
 
 <li id='BonoraBregolaLechnerPastiTonin87'>
-<p><a class='existingWikiWord' href='/nlab/show/Loriano+Bonora'>Loriano Bonora</a>, M. Bregola; <a class='existingWikiWord' href='/nlab/show/Kurt+Lechner'>Kurt Lechner</a>, <a class='existingWikiWord' href='/nlab/show/Paolo+Pasti'>Paolo Pasti</a>, <a class='existingWikiWord' href='/nlab/show/Mario+Tonin'>Mario Tonin</a>, <em>Anomaly-free supergravity and super-Yang-Mills theories in ten dimensions</em>, Nuclear Physics B Volume 296, Issue 4, 25 January 1988 (<a href='http://dx.doi.org/10.1016/0550-3213(88)90402-6'>doi:10.1016/0550-3213(88)90402-6</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Loriano+Bonora'>Loriano Bonora</a>, M. Bregola, <a class='existingWikiWord' href='/nlab/show/Kurt+Lechner'>Kurt Lechner</a>, <a class='existingWikiWord' href='/nlab/show/Paolo+Pasti'>Paolo Pasti</a>, <a class='existingWikiWord' href='/nlab/show/Mario+Tonin'>Mario Tonin</a>, <em>Anomaly-free supergravity and super-Yang-Mills theories in ten dimensions</em>, Nuclear Physics B Volume 296, Issue 4, 25 January 1988 (<a href='http://dx.doi.org/10.1016/0550-3213(88)90402-6'>doi:10.1016/0550-3213(88)90402-6</a>)</p>
 </li>
 
 <li>
@@ -1100,7 +1100,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Martin+Cederwall'>Martin Cederwall</a>, <a class='existingWikiWord' href='/nlab/show/Bengt+Nilsson'>Bengt Nilsson</a>, Dimitrios Tsimpis, <em><math class='maruku-mathml' display='inline' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>10</mn></mrow><annotation encoding='application/x-tex'>D=10</annotation></semantics></math> Super-Yang-Mills at <math class='maruku-mathml' display='inline' id='mathml_f1b2b2eb7a015be6faba1dbaa0f1443ec16bc58f_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>O</mi><mo stretchy='false'>(</mo><mi>α</mi><msup><mo>′</mo> <mn>2</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>O(\alpha&#39;^2)</annotation></semantics></math></em>, JHEP 0107:042,2001 (<a href='http://arxiv.org/abs/hep-th/0104236'>arXiv:hep-th/0104236</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Martin+Cederwall'>Martin Cederwall</a>, <a class='existingWikiWord' href='/nlab/show/Bengt+Nilsson'>Bengt Nilsson</a>, Dimitrios Tsimpis, <em><math class='maruku-mathml' display='inline' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>10</mn></mrow><annotation encoding='application/x-tex'>D=10</annotation></semantics></math> Super-Yang-Mills at <math class='maruku-mathml' display='inline' id='mathml_686bbeb03d6db47e52ac81ab0599901fa2361266_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>O</mi><mo stretchy='false'>(</mo><mi>α</mi><msup><mo>′</mo> <mn>2</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>O(\alpha&#39;^2)</annotation></semantics></math></em>, JHEP 0107:042,2001 (<a href='http://arxiv.org/abs/hep-th/0104236'>arXiv:hep-th/0104236</a>)</p>
 </li>
 
 <li>
@@ -1119,7 +1119,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  7, 2018 00:58:26 
+  Revised on March  7, 2018 01:37:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.202)
 </div>
