--- a/pages/3943.html
+++ b/pages/3943.html
@@ -301,6 +301,9 @@ margin-left: 0em;
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
 </div>
+<div>
+   <p style="font-size: 0.85em; color:red;">Please note that the nLab and nForum will be down for planned maintenance between around 02:00 GMT and 15:00 GMT on the 11th of March. The <a href="https://groups.google.com/forum/#!forum/nlab-talk">nLab talk</a> Google Group can be used for communication during the period of downtime. Apologies for any inconvenience.</p>    
+</div>
 
 
 
@@ -312,7 +315,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_47dd14fc8f3abe55935c75884e40ac820214b9b1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
+<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a></strong></p>
@@ -345,7 +348,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_47dd14fc8f3abe55935c75884e40ac820214b9b1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
+<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
 </li>
 
 <li>
@@ -556,14 +559,54 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#statement'>Statement</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The analog in <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> theory of the/a <a class='existingWikiWord' href='/nlab/show/adjoint+functor+theorem'>adjoint functor theorem</a> in ordinary <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>.</p>
+<p>The analogs in <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> theory of the <span class='newWikiWord'>adjoint functor theorems<a href='/nlab/new/adjoint+functor+theorems'>?</a></span> in ordinary <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>.</p>
 
 <h2 id='statement'>Statement</h2>
 
-<div class='un_theorem'>
+<div class='num_defn'>
+<h6 id='definition'>Definition</h6>
+
+<ul>
+<li>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>:</mo><mi>𝒟</mi><mo>→</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>G:\mathcal{D} \to \mathcal{C}</annotation></semantics></math> be a functor between <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty, 1)</annotation></semantics></math>-categories. We say that <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> satisfies the <strong>solution set condition</strong> if the <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty, 1)</annotation></semantics></math>-category <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>c/G</annotation></semantics></math> admits a small weakly initial set for any <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>.</p>
+</li>
+
+<li>
+<p><math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> satisfies the <strong><math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>h</mi></mrow><annotation encoding='application/x-tex'>h</annotation></semantics></math>-initial object condition</strong> if <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>c/G</annotation></semantics></math> admits an <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>h</mi></mrow><annotation encoding='application/x-tex'>h</annotation></semantics></math>-initial object for any <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>.</p>
+</li>
+
+<li>
+<p><math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> is said to be <strong>2-locally small</strong> if for every pair of objects, <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math>,<math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>, of <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>, the mapping space <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_20' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>map</mi> <mi>𝒞</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>map_{\mathcal{C}}(x,y)</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/locally+small+category'>locally small</a>.</p>
+</li>
+</ul>
+</div>
+
+<div class='num_theorem' id='GeneralAdjointFunctorTheorem'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_47dd14fc8f3abe55935c75884e40ac820214b9b1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>F : C \to D</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a> between <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>locally presentable (∞,1)-categories</a> then</p>
+<ul>
+<li>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_21' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>:</mo><mi>𝒟</mi><mo>→</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>G:\mathcal{D} \to \mathcal{C}</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/continuous+functor'>continuous functor</a>. Suppose that <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_22' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math> is locally small and complete and <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_23' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> is 2-locally small. Then <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_24' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> admits a left adjoint if and only if it satisfies the solution set condition.</p>
+</li>
+
+<li>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_25' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>:</mo><mi>𝒟</mi><mo>→</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>G:\mathcal{D} \to \mathcal{C}</annotation></semantics></math> be a <span class='newWikiWord'>finitely continuous functor<a href='/nlab/new/finitely+continuous+functor'>?</a></span>. Suppose that <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_26' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math> is finitely complete. Then <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_27' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> admits a left adjoint if and only if it satisfies the <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_28' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>h</mi></mrow><annotation encoding='application/x-tex'>h</annotation></semantics></math>-initial object condition.</p>
+</li>
+</ul>
+</div>
+
+<div class='proof'>
+<h6 id='proof'>Proof</h6>
+
+<p>See Section 3 of (<a href='#NRS18'>NRS18</a>).</p>
+</div>
+
+<p>The following result is a consequence.</p>
+
+<div class='num_theorem'>
+<h6 id='theorem_2'>Theorem</h6>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_29' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>F : C \to D</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a> between <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>locally presentable (∞,1)-categories</a> then</p>
 
 <ol>
 <li>
@@ -577,7 +620,7 @@ margin-left: 0em;
 </div>
 
 <div class='proof'>
-<h6 id='proof'>Proof</h6>
+<h6 id='proof_2'>Proof</h6>
 
 <p>This is <a class='existingWikiWord' href='/nlab/show/Higher+Topos+Theory'>HTT, cor. 5.5.2.9</a>.</p>
 </div>
@@ -590,11 +633,15 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><strong>adjoint <math class='maruku-mathml' display='inline' id='mathml_47dd14fc8f3abe55935c75884e40ac820214b9b1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-functor theorem</strong></p>
+<p><strong>adjoint <math class='maruku-mathml' display='inline' id='mathml_0d9866c7b5e7f6a6baa497695ffc12e84cb1df1b_30' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-functor theorem</strong></p>
 </li>
 </ul>
 
 <h2 id='references'>References</h2>
+
+<ul>
+<li id='NRS18'>Hoang Kim Nguyen, George Raptis, Christoph Schrade, <em>Adjoint functor theorems for ∞-categories</em>, (<a href='https://arxiv.org/abs/1803.01664'>arXiv:1803.01664</a>)</li>
+</ul>
 
 <p>Section 5.5 of</p>
 
@@ -607,14 +654,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 25, 2014 19:03:37 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (136.152.142.138)
+  Revised on March  7, 2018 03:52:55 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/adjoint+%28infinity%2C1%29-functor+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+%28infinity%2C1%29-functor+theorem/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/adjoint+%28infinity%2C1%29-functor+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+%28infinity%2C1%29-functor+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/adjoint+%28infinity%2C1%29-functor+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+%28infinity%2C1%29-functor+theorem/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/adjoint+%28infinity%2C1%29-functor+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+%28infinity%2C1%29-functor+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
