--- a/pages/4123.html
+++ b/pages/4123.html
@@ -301,6 +301,9 @@ margin-left: 0em;
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
 </div>
+<div>
+   <p style="font-size: 0.85em; color:red;">Please note that the nLab and nForum will be down for planned maintenance between around 02:00 GMT and 15:00 GMT on the 11th of March. The <a href="https://groups.google.com/forum/#!forum/nlab-talk">nLab talk</a> Google Group can be used for communication during the period of downtime. Apologies for any inconvenience.</p>    
+</div>
 
 
 
@@ -308,7 +311,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>This page is about a property of <a class='existingWikiWord' href='/nlab/show/%C4%8Cech+nerve'>Čech nerves</a> in <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>. For the “nerve theorem” in <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> see at <em><a class='existingWikiWord' href='/nlab/show/Segal+condition'>Segal conditions</a></em>.</p>
+    <p>This page is about a property of <a class='existingWikiWord' href='/nlab/show/%C4%8Cech+nerve'>Cech nerves</a> in <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>. For the “nerve theorem” in <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> see at <em><a class='existingWikiWord' href='/nlab/show/Segal+condition'>Segal conditions</a></em>.</p>
 <hr/>
 <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
@@ -1035,8 +1038,8 @@ margin-left: 0em;
 <div class='num_theorem'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/paracompact+topological+space'>paracompact space</a> and <math class='maruku-mathml' display='inline' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo>→</mo><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{U_i \to X\}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/good+open+cover'>good open cover</a>. Write <math class='maruku-mathml' display='inline' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>C(\{U_i\})</annotation></semantics></math> for the <a class='existingWikiWord' href='/nlab/show/%C4%8Cech+nerve'>Cech nerve</a> of this cover</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>(</mo><mover><mover><mo>⟶</mo><mo>⟶</mo></mover><mo>⟶</mo></mover><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∐</mo> <mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></munder><msub><mi>U</mi> <mi>i</mi></msub><mo>∩</mo><msub><mi>U</mi> <mi>j</mi></msub><mover><mo>⟶</mo><mo>⟶</mo></mover><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∐</mo> <mi>i</mi></munder><msub><mi>U</mi> <mi>i</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/paracompact+topological+space'>paracompact space</a> and <math class='maruku-mathml' display='inline' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo>→</mo><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{U_i \to X\}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/good+open+cover'>good open cover</a>. Write <math class='maruku-mathml' display='inline' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>C(\{U_i\})</annotation></semantics></math> for the <a class='existingWikiWord' href='/nlab/show/%C4%8Cech+nerve'>Cech nerve</a> of this cover</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>(</mo><mover><mover><mo>⟶</mo><mo>⟶</mo></mover><mo>⟶</mo></mover><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∐</mo> <mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></munder><msub><mi>U</mi> <mi>i</mi></msub><mo>∩</mo><msub><mi>U</mi> <mi>j</mi></msub><mover><mo>⟶</mo><mo>⟶</mo></mover><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∐</mo> <mi>i</mi></munder><msub><mi>U</mi> <mi>i</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   C(\{U_i\}) = \left(
     \stackrel{\longrightarrow}{\stackrel{\longrightarrow}{\longrightarrow}}\coprod_{i,j} U_i \cap U_j \stackrel{\longrightarrow}{\longrightarrow} \coprod_{i} U_i
   \right)
@@ -1044,15 +1047,15 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>(a <a class='existingWikiWord' href='/nlab/show/simplicial+object'>simplicial</a> <a class='existingWikiWord' href='/nlab/show/space'>space</a>) and write</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>C</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>(</mo><mover><mover><mo>⟶</mo><mo>⟶</mo></mover><mo>⟶</mo></mover><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∐</mo> <mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></munder><mo>*</mo><mover><mo>⟶</mo><mo>⟶</mo></mover><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∐</mo> <mi>i</mi></munder><mo>*</mo><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>C</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>(</mo><mover><mover><mo>⟶</mo><mo>⟶</mo></mover><mo>⟶</mo></mover><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∐</mo> <mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></munder><mo>*</mo><mover><mo>⟶</mo><mo>⟶</mo></mover><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∐</mo> <mi>i</mi></munder><mo>*</mo><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
   \tilde C(\{U_i\}) = \left(
     \stackrel{\longrightarrow}{\stackrel{\longrightarrow}{\longrightarrow}}\coprod_{i,j} * \stackrel{\longrightarrow}{\longrightarrow} \coprod_{i} *
   \right)
 
 </annotation></semantics></math></div>
-<p>for the <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial set</a> obtained by replacing in <math class='maruku-mathml' display='inline' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>C(\{U_i\})</annotation></semantics></math> each <a class='existingWikiWord' href='/nlab/show/direct+sum'>direct sum</a>mand space by the <a class='existingWikiWord' href='/nlab/show/point'>point</a>. Let <math class='maruku-mathml' display='inline' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>|</mo><mover><mi>C</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo><mo stretchy='false'>|</mo></mrow><annotation encoding='application/x-tex'>|\tilde C(\{U_i\})|</annotation></semantics></math> be the <a class='existingWikiWord' href='/nlab/show/geometric+realization'>geometric realization</a>.</p>
+<p>for the <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial set</a> obtained by replacing in <math class='maruku-mathml' display='inline' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>C(\{U_i\})</annotation></semantics></math> each <a class='existingWikiWord' href='/nlab/show/direct+sum'>direct sum</a>mand space by the <a class='existingWikiWord' href='/nlab/show/point'>point</a>. Let <math class='maruku-mathml' display='inline' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>|</mo><mover><mi>C</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo><mo stretchy='false'>|</mo></mrow><annotation encoding='application/x-tex'>|\tilde C(\{U_i\})|</annotation></semantics></math> be the <a class='existingWikiWord' href='/nlab/show/geometric+realization'>geometric realization</a>.</p>
 
-<p>This is <a class='existingWikiWord' href='/nlab/show/homotopy+equivalence'>homotopy equivalent</a> to <math class='maruku-mathml' display='inline' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<p>This is <a class='existingWikiWord' href='/nlab/show/homotopy+equivalence'>homotopy equivalent</a> to <math class='maruku-mathml' display='inline' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
 </div>
 
 <p>This is usually attributed to (<a href='#Borsuk'>Borsuk1948</a>). The proof relies on the existence of <a class='existingWikiWord' href='/nlab/show/partition+of+unity'>partitions of unity</a> (see for instance the review <a href='#Hatcher'>Hatcher, prop. 4G.2</a>).</p>
@@ -1096,7 +1099,7 @@ margin-left: 0em;
 <p>A version for hypercovers is discussed in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Daniel+Dugger'>Daniel Dugger</a>, <a class='existingWikiWord' href='/nlab/show/Daniel+Isaksen'>Daniel C. Isaksen</a>, <em>Topological hypercovers and <math class='maruku-mathml' display='inline' id='mathml_b2ba9f5658194518e5e8e44e16bdf4f5a294860e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>𝔸</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{A}^1</annotation></semantics></math>-realizations</em>, Math. Z. 246 (2004), no. 4, 667–689.</li>
+<li><a class='existingWikiWord' href='/nlab/show/Daniel+Dugger'>Daniel Dugger</a>, <a class='existingWikiWord' href='/nlab/show/Daniel+Isaksen'>Daniel C. Isaksen</a>, <em>Topological hypercovers and <math class='maruku-mathml' display='inline' id='mathml_e4a7379a61520dec4ba4d15ca27264297b27d723_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>𝔸</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{A}^1</annotation></semantics></math>-realizations</em>, Math. Z. 246 (2004), no. 4, 667–689.</li>
 </ul>
 
 <p>A review appears as corollary 4G.3 in the textbook</p>
@@ -1116,17 +1119,23 @@ margin-left: 0em;
 <p>Andrzej Nagórko, <em>Carrier and nerve theorems in the extension theory</em> Proc. Amer. Math. Soc. 135 (2007), 551-558. (<a href='http://www.ams.org/journals/proc/2007-135-02/S0002-9939-06-08477-2/home.html'>web</a>)</p>
 </li>
 </ul>
+
+<p>A nerve theorem for categories has been proved in</p>
+
+<ul>
+<li>Kohei Tanaka, <em>Cech complexes for covers of small categories</em>, Homology, Homotopy and Applications 19(1), (2017), pp. 281-291. <a href='https://arxiv.org/abs/1508.03688'>ArXiv Abstract 1508.03688</a></li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on July 13, 2015 03:36:11 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.121.114)
+  Revised on March  8, 2018 02:25:08 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (95.145.121.180)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/nerve+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nerve+theorem/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/nerve+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nerve+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/nerve+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nerve+theorem/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/nerve+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nerve+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
