--- a/pages/17954.html
+++ b/pages/17954.html
@@ -311,7 +311,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a href='iancoley.org'>My website</a></p>
+    <p><a href='http://iancoley.org'>My website</a></p>
 
 <h4 id='interests'>Interests</h4>
 
@@ -324,19 +324,19 @@ margin-left: 0em;
 <h4 id='papers'>Papers</h4>
 
 <ul>
-<li><a href='arxiv.org/abs/1802.04343'>Stabilization of derivators revisited</a></li>
+<li><a href='http://arxiv.org/abs/1802.04343'>Stabilization of derivators revisited</a></li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on March 10, 2018 16:40:26 
-  by <a class="existingWikiWord" href="/nlab/show/Ian+Coley">Ian Coley</a>
-  (23.243.218.128)
+  Revised on March 11, 2018 03:29:50 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (2.27.86.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ian+Coley" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ian+Coley/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Ian+Coley" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ian+Coley" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ian+Coley" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ian+Coley/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Ian+Coley" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ian+Coley" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
