--- a/pages/611.html
+++ b/pages/611.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -320,20 +320,31 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/extended+cobordism'>extended cobordism</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/double+bicategory'>double bicategory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/groupoidification'>groupoidification</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on October  9, 2009 22:48:14 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (71.104.230.172)
+  Revised on March 12, 2018 20:48:20 
+  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
+  (129.127.37.121)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jeffrey+Morton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jeffrey+Morton/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Jeffrey+Morton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jeffrey+Morton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Jeffrey+Morton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jeffrey+Morton/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Jeffrey+Morton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jeffrey+Morton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
