--- a/pages/2874.html
+++ b/pages/2874.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -321,14 +321,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  8, 2014 04:42:22 
-  by <a class="existingWikiWord" href="/nlab/show/Colin+Zwanziger">Colin Zwanziger</a>
-  (128.237.198.5)
+  Revised on March 13, 2018 00:00:35 
+  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
+  (129.127.37.121)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Theory+and+Applications+of+Categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Theory+and+Applications+of+Categories/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Theory+and+Applications+of+Categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Theory+and+Applications+of+Categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Theory+and+Applications+of+Categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Theory+and+Applications+of+Categories/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Theory+and+Applications+of+Categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Theory+and+Applications+of+Categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
